services/greet/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greet
  namespace: stage
spec:
  selector:
    matchLabels:
      app: s-greet
  template:
    metadata:
      labels:
        app: s-greet
    spec:
      containers:
      - name: s-greet-cntr
        image: localhost:5000/greet-srv
        ports:
        - containerPort: 9002
