services/greet/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-greet
  namespace: stage
spec:
  type: NodePort
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: 9002
  selector:
    app: s-greet
