services/greet/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s-greet
  namespace: stage
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: greet.showdown
    http:
      paths:
      - backend:
          serviceName: s-greet
          servicePort: main
        path: /
